services/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    # konghq.com/plugins: jwt-auth, admin-acl, rate-limit-5-min
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: api.got.co.th 
      http:
          paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
